# azure-storage-cli

./: .typos.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
eng/: build.sh
src/: account.rs  blob.rs  container.rs  datalake.rs  lib.rs  macros.rs  main.rs  queue.rs  sync.rs  tables.rs  utils.rs
src/blob/: create_block_blob.rs  create_page_blob.rs  generate_sas.rs  get.rs  mod.rs
