[package]
authors = ["bcaswell@gmail.com"]
categories = ["command-line-utilities"]
description = "A CLI to interact with Azure Storage services"
edition = "2021"
keywords = ["azure", "blobs"]
license = "MIT"
name = "azure-storage-cli"
repository = "https://github.com/demoray/azure-storage-cli"
version = "0.9.0"

[dependencies]
anyhow = "1.0"
azure_core = { version = "0.21", features = ["tokio-fs"] }
azure_data_tables = "0.21"
azure_identity = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_storage_datalake = "0.21"
azure_storage_queues = "0.21"
clap = { version = "4.5", default-features = false, features = ["derive", "env", "error-context", "help", "std", "suggestions", "usage"] }
duration-string = "0.5"
futures = "0.3"
native-tls = { version = "0.2", features = ["vendored"] }
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.48", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19", features = ["serde", "v4"] }

[[bin]]
name = "azs"
path = "src/main.rs"

[profile.release-lto]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
